# ipfs-file-leaks

./: .gitignore  README.md
encryption-node/: Cargo.toml  build.rs  raw_ciphertext_download
encryption-node/src/: client.rs  config.rs  crypto.rs  error.rs  ipfs.rs  key_client.rs  lib.rs  main.rs  pipeline.rs
encryption-node/tests/: round_trip.rs
key-server/: Dockerfile  go.mod  main.go
key-server/pb/: key_service.pb.go  key_service_grpc.pb.go
key-server/replication/: replicator.go
key-server/server/: server.go
key-server/store/: store.go
proto/: key_service.proto
testbed/: docker-compose.yml  start-testbed.sh
