[package]
name = "encryption-node"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "encryption-node"
path = "src/main.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1", features = ["full"] }

chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
rand = "0.8"
# Using reqwest to call the IPFS HTTP API directly (avoids broken ipfs-api-backend-hyper deps)
reqwest = { version = "0.12", features = ["multipart", "json"] }
serde_json = "1"
thiserror = "1"
url = "2"

[build-dependencies]
tonic-build = "0.10"
protoc-bin-vendored = "3"
